--- a/MVC-flask/view/templates/index.html
+++ b/MVC-flask/view/templates/index.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Index Page</h1>
+    <h1>Usuários</h1>
 
     <ul>
         {% for user in users %}
         <li>{{user.name}} - {{user.email}}</li>
         {% endfor %}
     </ul>
-    <a href="{{ url_for('create_user') }}">Página de Cadastro</a> |
+    <a href="{{ url_for('create_user') }}">Cadastro de Usuário</a> |
     <a href="{{ url_for('list_tasks') }}">Página de Tarefas</a> |
-    <a href="{{ url_for('contact') }}">Cadastrar Tarefa</a>
 {% endblock %}
